fix: correct slider thumb alignment

--- a/src/style/components/filters/_range.scss
+++ b/src/style/components/filters/_range.scss
@@ -26,12 +26,15 @@
   }
 
   &__range-input {
+    top: -10px;
+
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     label {
+      margin-top: 15px;
       font-size: 16px;
       color: variables.$grey-dark;
       margin-right: 5px;
